Improve popup menus

-"Generate key pair" should not show up in any popup menu
-importing of several missing signatures at once works now

FEATURE:74873
BUG:104825
GUI

svn path=/trunk/KDE/kdeutils/kgpg/; revision=699871